samples/task/valid/R19.dita
<?xml version="1.0" encoding="UTF-8"?>
<task>
  <title>Test Title</title>
  <shortdesc>Short description</shortdesc>
  <prolog/>
  <taskbody>
    <steps><step><cmd/><info><p>info</p></info><substeps><substep><cmd/></substep></substeps></step></steps>
  </taskbody>
</task>