samples/task/invalid/R13.dita
<?xml version="1.0" encoding="UTF-8"?>
<task>
  <title>Test Title</title>
  <shortdesc>Short description</shortdesc>
  <prolog/>
  <taskbody>
    <context><p>Context info</p></context>
  </taskbody>
</task>